<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight=".8"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/thanksTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:paddingLeft="10dp"
            android:text="@string/goodbyeDemo"
            android:textColor="#848484"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/paymentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="Your order will be processed after payment"
            android:textColor="#848484"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/linkValidation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0.05"
            android:paddingBottom="5dp"
            android:text="@string/validationLink"
            android:textColor="#848484"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight=".8" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/alternateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/alternativePayOption"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>